/*
 * $Id: ChangeLog,v 1.1538 2015-12-09 19:49:32 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2015-12-09 13:46 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_picture.prg
     ! Re-activated commented SCROLLS() call.
   * source/makelib_bcc.bat
     ! Added bostaurus.c to clean up.

2015-12-07 23:50 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * samples\oohg\stream\TStream.prg
     + ::Append() method added.
   * samples\oohg\stream\TStreamSocket.prg
     + Bluetooth support.

2015-12-01 19:15 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_altsyntax.ch
     * THEMED clause is initialized as NIL instead of .F.
     + EDITFIRSTVISIBLE clause.
   * source/h_button.prg
     * Image alignment now defaults to CENTER instead of LEFT when the
       button has no caption.
   * source/h_image.prg
   * source/h_picture.prg
     * Changed parameter name.

2015-11-29 22:24 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_checkbox.prg
   * source/h_radio.prg
     * ::lThemed now defaults to IsAppThemed() instead of .F. in ::Define().

2015-11-29 22:19 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_windefs.ch
     + BUTTON_IMAGELIST_ALIGN_* constants.
     + DT_* constants.
   * include/oohg.h
     * _OOHG_ScaleImage() declaration.
   * source/c_gdiplus.c
     * New parameters in calls to _OOHG_ScaleImage().
   * source/c_image.c
     + New parameters iHrzMrgn and iVrtMrgn in _OOHG_ScaleImage().
       Use them to reduce the size of the scaled image so it does not
       occupy the entire control's rect.
     + New parameters in calls to _OOHG_ScaleImage().
     * Parameter scalestrech changed from int to BOOL.
   * source/h_button.prg
     * Use BUTTON_IMAGELIST_ALIGN_* constants instead of numbers.