@@ -1,11 +1,17 @@
 /*
- * $Id: ChangeLog,v 1.1538 2015-12-09 19:49:32 guerra000 Exp $
+ * $Id: ChangeLog,v 1.1539 2015-12-09 23:46:53 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2015-12-09 20:46 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+   * source/c_image.c
+   * source/h_form.prg
+   * source/h_picture.prg
+     ! Wrong parameter order in _OOHG_ScaleImage() call.
 
 2015-12-09 13:46 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
    * source/h_picture.prg
